--- a/CultivosCiclicosWeb/src/app/usuarios/pages/home/home.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/home/home.component.html
@@ -1,3 +1,48 @@
-<p>home works!</p>
-<hr>
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+    <mat-sidenav #sidenav mode="push">
+        <mat-toolbar color="primary">
+            <span>Menú</span>
+            <span class="spacer"></span>
+            <button mat-icon-button
+                    (click)="sidenav.toggle()">
+                <mat-icon>reorder</mat-icon>      
+            </button>
+        </mat-toolbar>
+        <mat-nav-list>
+            <a routerLink="./listado"
+                mat-list-item
+                (click)="sidenav.toggle()"> 
+                <mat-icon mat-list-icon >label</mat-icon>
+                <span>Listado de Usuarios</span>
+            </a>
+            <a routerLink="./agregar"
+                mat-list-item
+                (click)="sidenav.toggle()"> 
+                <mat-icon  mat-list-icon>add</mat-icon>
+                <span>Añadir Usuario</span>
+            </a>
+            
+            <a routerLink="./buscar"
+                mat-list-item
+                (click)="sidenav.toggle()"> 
+                <mat-icon  mat-list-icon>search</mat-icon>
+                <span>Buscar Usuario</span>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-toolbar>
+        <button mat-icon-button
+                (click)="sidenav.toggle()">
+            <mat-icon>reorder</mat-icon>      
+        </button>
+        
+        <span class="spacer"></span>
+        <button mat-button>
+             logout  
+        </button>
+    </mat-toolbar>
+
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>    
+</mat-sidenav-container>
