--- a/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
@@ -1,3 +1,36 @@
-<p>listado works!</p>
+<h1>listado de Usuarios</h1>
+<mat-divider></mat-divider>
+<br/>
 
-<li *ngFor="let usu of listaUsuario"> {{usu.nombreCompleto}} </li>
+<div fxLayout="row wrap" 
+fxLayout.xs="column"
+fxLayoutAlign="center"
+fxLayoutGap="20px">
+    <div fxFlex="20"
+    fxFlex.lg="18"
+    fxFlex.sm="30"
+    *ngFor="let usu of listaUsuario">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title> {{usu.nombreCompleto}} </mat-card-title>
+                <mat-card-subtitle> {{usu.rol}}</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+                <h3>{{usu.correo}}</h3>
+                <p>
+                    <strong>Tipo Documento</strong> {{ usu.tipoDocumento }}
+                    <br/>
+                    <strong>Número de Documento </strong> {{ usu.numeroIdentificacion }}1
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-stroked-button color="warn">
+                    Eliminar
+                </button>
+                <button mat-raised-button color="primary">
+                    Editar
+                </button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
