--- a/CultivosCiclicosWeb/src/app/usuarios/pages/agregar/agregar.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/agregar/agregar.component.html
@@ -1,1 +1,56 @@
-<p>agregar works!</p>
+<h1>Nuevo Usuario<small>asd</small></h1>
+
+<div fxLayout="row" fxLayoutGap="40px">
+    <div fxFlex="100" fxLayout="column">                
+        <div fxLayout="row" fxLayoutGap="20px">
+            <mat-form-field fxFlex="100">
+                <mat-label>Usuario</mat-label>
+                <input matInput 
+                type="text" 
+                required="">
+            </mat-form-field>
+        
+            <mat-form-field fxFlex="100">
+                <mat-label>Apellido</mat-label>
+                <input matInput 
+                type="text" 
+                required="">
+            </mat-form-field>
+        </div>
+    
+        <mat-form-field fxFlex="100">
+            <mat-label>Correo</mat-label>
+            <input matInput 
+            type="text" 
+            required="">
+        </mat-form-field>
+        
+        <mat-form-field fxFlex="100">
+            <mat-label>Rol</mat-label>
+            <mat-select>
+                <mat-option *ngFor="let rol of roles"
+                            [value]="rol.id">
+                            {{ rol.desc }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        
+        <mat-form-field fxFlex="100">
+            <mat-label>Tipo Documento</mat-label>
+            <input matInput 
+            type="text" 
+            required="">
+        </mat-form-field> 
+        <mat-form-field fxFlex="100">
+            <mat-label>Número de Identificación</mat-label>
+            <input matInput 
+            type="text" 
+            required="">
+        </mat-form-field>
+        <button mat-raised-button color="primary">
+            <mat-icon>edit</mat-icon>
+            Guardar
+        </button>
+    </div>
+    
+</div>
