--- a/CultivosCiclicosWeb/src/app/usuarios/pages/buscar/buscar.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/buscar/buscar.component.html
@@ -1,1 +1,33 @@
-<p>buscar works!</p>
+
+
+<div fxLayout="column">
+    <div>
+        <h1>Buscador de Usuarios</h1>
+        <mat-divider></mat-divider>
+    </div>
+    <div fxLayout="column">
+        <h3>Buscador</h3>
+        <mat-form-field class="example-full-width">
+            <input type="text"
+                placeholder="Pick one"
+                aria-label="Number"
+                matInput
+                [(ngModel)]="termino"
+                [matAutocomplete]="auto"
+                (input)="buscarUsuario()">
+            <mat-autocomplete autoActiveFirstOption 
+            #auto="matAutocomplete"
+            (optionSelected)="opcionSeleccionada($event)">
+                <mat-option *ngFor="let usuario of usuarios" [value]="usuario">
+                    {{usuario.nombreCompleto}}
+                </mat-option>
+                <mat-option *ngIf="this.usuarios.length === 0 && termino.trim().length > 0" value="">
+                    No se encontró nada con el termino {{ termino }}
+                </mat-option>
+            </mat-autocomplete>
+        </mat-form-field>
+    </div>
+</div>
+<div *ngIf="usuarioSeleccionado">
+    <app-usuario-tarjeta [usuario]="usuarioSeleccionado"></app-usuario-tarjeta>
+</div>
