--- a/CultivosCiclicosWeb/src/app/usuarios/pages/agregar/agregar.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/agregar/agregar.component.html
@@ -1,33 +1,42 @@
-<h1>Nuevo Usuario<small>asd</small></h1>
+<h1>Nuevo Usuario</h1>
 
-<div fxLayout="row" fxLayoutGap="40px">
-    <div fxFlex="100" fxLayout="column">                
-        <div fxLayout="row" fxLayoutGap="20px">
-            <mat-form-field fxFlex="100">
+<div fxLayout="row" 
+     fxLayoutGap="40px">
+    <div fxFlex="100" 
+         fxLayout="column">                
+        <div    fxLayout="row" 
+                fxLayout.xs="column"
+                fxLayoutGap="20px">
+            <mat-form-field fxFlex="100" 
+                            fxLayout.xs="column">
                 <mat-label>Usuario</mat-label>
-                <input matInput 
-                type="text" 
-                required="">
+                <input  matInput 
+                        type="text" 
+                        required=""
+                        [(ngModel)]="usuario.nombre">
             </mat-form-field>
         
             <mat-form-field fxFlex="100">
                 <mat-label>Apellido</mat-label>
-                <input matInput 
-                type="text" 
-                required="">
+                <input  matInput 
+                        type="text" 
+                        required=""
+                        [(ngModel)]="usuario.apellido">
             </mat-form-field>
         </div>
     
         <mat-form-field fxFlex="100">
             <mat-label>Correo</mat-label>
-            <input matInput 
-            type="text" 
-            required="">
+            <input  matInput 
+                    type="text" 
+                    required=""            
+                    [(ngModel)]="usuario.correo">
         </mat-form-field>
         
         <mat-form-field fxFlex="100">
             <mat-label>Rol</mat-label>
-            <mat-select>
+            <mat-select [(ngModel)]="usuario.rol"
+                        required>
                 <mat-option *ngFor="let rol of roles"
                             [value]="rol.id">
                             {{ rol.desc }}
@@ -37,17 +46,31 @@
         
         <mat-form-field fxFlex="100">
             <mat-label>Tipo Documento</mat-label>
-            <input matInput 
-            type="text" 
-            required="">
+            <mat-select [(ngModel)]="usuario.tipoDocumento"
+                        required>
+                <mat-option *ngFor="let tipo of tipodocumentos"
+                            [value]="tipo.id">
+                            {{ tipo.desc }}
+                </mat-option>
+            </mat-select>
         </mat-form-field> 
         <mat-form-field fxFlex="100">
             <mat-label>Número de Identificación</mat-label>
-            <input matInput 
-            type="text" 
-            required="">
+            <input  matInput 
+                    type="text" 
+                    required=""
+                    [(ngModel)]="usuario.numeroIdentificacion">
         </mat-form-field>
-        <button mat-raised-button color="primary">
+        <mat-form-field fxFlex="100">
+            <mat-label>Contraseña</mat-label>
+            <input  matInput 
+                    type="password" 
+                    required=""
+                    [(ngModel)]="usuario.contrasenia">
+        </mat-form-field>
+        <button mat-raised-button 
+                color="primary"
+                (click)="guardar()">
             <mat-icon>edit</mat-icon>
             Guardar
         </button>
