--- a/CultivosCiclicosWeb/src/app/usuarios/components/usuario-tarjeta/usuario-tarjeta.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/components/usuario-tarjeta/usuario-tarjeta.component.html
@@ -15,7 +15,7 @@
         <button mat-stroked-button 
         color="warn"
         [routerLink]="['/usuarios', usuario.id]">
-            Eliminar
+            Detalles
         </button>
         <button mat-raised-button 
         color="primary"
