--- a/CultivosCiclicosWeb/src/app/usuarios/pages/home/home.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/home/home.component.html
@@ -37,7 +37,8 @@
         </button>
         
         <span class="spacer"></span>
-        <button mat-button>
+        <button mat-button 
+                (click)="logout()">
              logout  
         </button>
     </mat-toolbar>
