--- a/CultivosCiclicosWeb/src/app/shared/error-page/error-page.component.html
+++ b/CultivosCiclicosWeb/src/app/shared/error-page/error-page.component.html
@@ -11,5 +11,8 @@
         </a>
     </li>
     <li>
+        <a routerLink="/usuarios/listado">
+            Ir a listado
+        </a>
     </li>
 </ul>
