--- a/CultivosCiclicosWeb/src/app/usuarios/pages/home/home.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/home/home.component.html
@@ -37,6 +37,9 @@
         </button>
         
         <span class="spacer"></span>
+
+        <span> {{ auth.usuarioCompleto }} </span>
+
         <button mat-button 
                 (click)="logout()">
              logout  
