--- a/CultivosCiclicosWeb/src/app/auth/pages/login/login.component.html
+++ b/CultivosCiclicosWeb/src/app/auth/pages/login/login.component.html
@@ -6,5 +6,10 @@
                 (click)="login()">
             Ingresar
         </button>
+        <button mat-raised-button 
+                color="warn" 
+                (click)="IngresarSinLogin()">
+            Ingresar sin login
+        </button>
     </mat-grid-tile>
 </mat-grid-list>
