--- a/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
@@ -2,6 +2,9 @@
 <mat-divider></mat-divider>
 <br/>
 
+<form autocomplete="off" 
+[formGroup]="miFormulario">
+
 <div fxLayout="column">
     <div fxLayout="column">
         <h3>Buscador</h3>
@@ -13,7 +16,7 @@
                     placeholder="Pick one"
                     aria-label="Number"
                     matInput
-                    [(ngModel)]="termino"
+                    formControlName="termino"
                     [matAutocomplete]="auto"
                     (input)="buscarUsuario()">
                 <button (click)="refrescar()">
@@ -26,9 +29,9 @@
                 <mat-option *ngFor="let usuario of usuarios" [value]="usuario">
                     {{usuario.nombreCompleto}}
                 </mat-option>
-                <mat-option *ngIf="this.usuarios.length === 0 && termino.trim().length > 0" value="">
+                <!-- <mat-option *ngIf="this.usuarios.length === 0 && termino.trim().length > 0" value="">
                     No se encontró nada con el termino {{ termino }}
-                </mat-option>
+                </mat-option> -->
             </mat-autocomplete>
         </mat-form-field>
     </div>
@@ -50,3 +53,4 @@
         </div>
     </div>
 </div>
+</form>
