--- a/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
+++ b/CultivosCiclicosWeb/src/app/usuarios/pages/listado/listado.component.html
@@ -2,55 +2,34 @@
 <mat-divider></mat-divider>
 <br/>
 
-<form autocomplete="off" 
-[formGroup]="miFormulario">
-
-<div fxLayout="column">
-    <div fxLayout="column">
-        <h3>Buscador</h3>
-        <mat-form-field class="example-full-width">
-            <div    fxLayout="row" 
-            fxLayout.xs="column"
-            fxLayoutGap="20px">
-                <input type="text"
-                    placeholder="Pick one"
-                    aria-label="Number"
-                    matInput
-                    formControlName="termino"
-                    [matAutocomplete]="auto"
-                    (input)="buscarUsuario()">
-                <button (click)="refrescar()">
-                    <mat-icon>refresh</mat-icon>
-                </button>
-            </div>
-            <mat-autocomplete autoActiveFirstOption 
-            #auto="matAutocomplete"
-            (optionSelected)="opcionSeleccionada($event)">
-                <mat-option *ngFor="let usuario of usuarios" [value]="usuario">
-                    {{usuario.nombreCompleto}}
-                </mat-option>
-                <!-- <mat-option *ngIf="this.usuarios.length === 0 && termino.trim().length > 0" value="">
-                    No se encontró nada con el termino {{ termino }}
-                </mat-option> -->
-            </mat-autocomplete>
-        </mat-form-field>
-    </div>
-</div>
-<div *ngIf="usuarioSeleccionado">
-    <app-usuario-tarjeta [usuario]="usuarioSeleccionado"></app-usuario-tarjeta>
-</div>
-
-<div *ngIf="usuarioSeleccionado == undefined">
-    <div fxLayout="row wrap" 
-    fxLayout.xs="column"
-    fxLayoutAlign="center"
-    fxLayoutGap="20px">
-        <div fxFlex="20"
-        fxFlex.lg="18"
-        fxFlex.sm="30"
-        *ngFor="let usu of listaUsuario">
-            <app-usuario-tarjeta [usuario]="usu"></app-usuario-tarjeta>
-        </div>
-    </div>
-</div>
-</form>
+<ngx-datatable class="material container striped"
+  [rows]="listaUsuario" 
+  [columnMode]="'flex'"
+  [headerHeight]="50"
+  [footerHeight]="50"
+  rowHeight="auto">
+      <ngx-datatable-column name="Id" [flexGrow]="0.5">
+        <ng-template let-row="row" let-value="value"
+         ngx-datatable-cell-template>
+            <button mat-stroked-button color="warn"
+            (click)="verDetalle(value)">
+                Detalles
+            </button>
+            <button mat-raised-button 
+            color="primary"
+            (click)="EditarRegistro(value)">
+                Editar
+            </button>
+        </ng-template>  
+      </ngx-datatable-column>
+      <ngx-datatable-column [flexGrow]="0.5" name="NombreCompleto">
+      </ngx-datatable-column>
+      <ngx-datatable-column [flexGrow]="0.5" name="Correo">
+      </ngx-datatable-column>
+      <ngx-datatable-column [flexGrow]="0.5" name="Rol">
+      </ngx-datatable-column>
+      <ngx-datatable-column [flexGrow]="0.5" name="TipoDocumento">
+      </ngx-datatable-column>
+      <ngx-datatable-column [flexGrow]="0.5" name="NumeroIdentificacion">
+      </ngx-datatable-column>
+  </ngx-datatable>
